fix card gap

--- a/css/main.scss
+++ b/css/main.scss
@@ -39,7 +39,7 @@ ul {
       ul {
         display: flex;
         li a {
-          font-size: 1.25;
+          font-size: 1.25em;
           padding: 0 0.6em;
         }
       }
@@ -95,17 +95,19 @@ ul {
     color: var(--copy-color);
     font-size: 4em;
     line-height: 100%;
+    margin-bottom: 0.50em;
   }
   .use-case-cards {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    gap: 2em;
     width: 100%;
     .card {
       border-radius: 1em;
       padding: 3em;
       background-color: #151515;
-      flex: 50%;
+      flex: 45%;
       h3 {
         font-weight:100;
         font-size: 2.5em;
